--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,67 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import 'bootstrap/scss/bootstrap';
+@import './variables';
+
+body {  
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+.form-control::-webkit-input-placeholder {
+    color: white;
+    opacity: 1;
+}
+
+.form-control::-moz-placeholder {
+    color: white;
+    opacity: 1;
+}
+
+.form-control {
+    color: #ffff;
+    background: none;
+    border: none;
+    border-bottom: 1px solid #ffff;
+    border-radius: 0;
+    padding-bottom: 10px;
+    font-size: 17px;
+}
+
+.form-control:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+  box-shadow: none;
+  border-color: #ffff;
+  background: none;
+  color: #ffff;
+}
+
+.sesion {
+    font-weight: 100;
+    font-size: 27px;
+}
+
+.loader-box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  top: 0px;
+  left: 0px;
+  text-align: center;
+  .spinner {
+    width: 3rem; 
+    height: 3rem;
+    top: 45%;
+    position: relative;
+  }
+}
+
+.btn-orange{
+  color:#FF6B00 !important;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+@import './responsive';
