--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,4 +64,23 @@ select:focus {
   text-transform: uppercase;
 }
 
+.modal-body {
+  color:#000000;
+  &.denegado {
+      font-weight: 500;
+      font-size: 17px;
+      i {
+          font-size: 40px;
+          color:#FF6B00;
+      }
+      .normal {
+          font-weight: normal;
+      }
+      .font-weight-500 {
+          font-weight: 500; 
+      }
+  }
+}
+
+
 @import './responsive';
